[package]
name = "project_sofia"
version = "0.1.0"
authors = ["Adel Urazov <39420242+AdelUrazov@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[dependencies.lazy_static]
version = "1.4.0"
features = ["spin_no_std"]

[package.metadata.bootimage]
test-args = ["-device", "isa-debug-exit,iobase=0xf4,iosize=0x04", "-serial", "stdio"]
test-success-exit-code = 33

[dependencies]
bootloader = "0.9.0"
volatile = "0.2.6"
spin = "0.5.2"
x86_64 = "0.9.6"
uart_16550 = "0.2.4"
